yoshimi 1.3.x

2016-5-19 Will
- Completed moving controls ID text from GUI to main code.
- Corrected dev-notes/Yoshimi Controller Numbers.ods

2016-5-18 Will
- Started moving controls ID text from GUI to main code.
- New sound Pad Organ :)

2016-5-17 Will
- Identified controls in Part Controllers.
- Updated dev-notes/Yoshimi Controller Numbers.ods

2016-5-16 Will
- Updated some tooltips
- Documentation now covers all implemeted controls.
- Identified top level controls.
- Adjusted some control numbers for conformity.

2016-5-15 Will
- Changed Resonance interpolation control to clarify two types
  and reorganised layout of neighboring controls for uniformity.
- Bugfix: Filter control had wrong ID
- Bugfix: LFO had wrong insert parameters.
- Bugfix: Got interpolation button names the wrong way round :(
- Documented most of the defined controls in dev-notes
- Bugfix: SubSynth wrong control ID.
- Bugfix: PadSynth missing control ID

2016-5-14 Will
- All Identifed data now passed to synthengine in uniform manner.
- Bugfix: Right click on mod oscilator didn't close AddVoice window.
- Mostly Identified Envelopes (not fee mode).
- Identified most of basic part controls.

2016-5-13 Will
- Identifed Resonance controls.
- Moved max resonance points definition to CMakeLists.txt
  and changed to more obvious name. In future we want to check
  this size outside immediate resonance code.

2016-5-12 Will
- Identified AddSynth & PadSynth oscillator controls.
- Included Adsynth Voice & Modulator controls.

2016-5-11 Will
- Improved SubSynth ID code.
- Corrected swapped controls in filters.
- Identifed AddSynth global controls.
- Identifed PadSynth controls.

2016-5-10 Will
- All of SubSynth identified (except embedded envelopes).

2016-5-9 Will
- Bugfix: Different versions of CMake require different ways of
  specifying C++11

2016-5-8 Will
- Filter params complete.
- Small improvement to the way we return control values.

2016-5-7 Will
- Yoshimi now requires C++11