@@ -53,18 +53,33 @@ decl {\#include "Params/EnvelopeParams.h"} {public local
 decl {\#include "PresetsUI.h"} {public local
 } 
 
+decl {\#include "Misc/SynthEngine.h"} {public global
+} 
+
+decl {\#include "MasterUI.h"} {private global
+} 
+
 class EnvelopeFreeEdit {: {public Fl_Box}
 } {
   Function {EnvelopeFreeEdit(int x,int y, int w, int h, const char *label=0):Fl_Box(x,y,w,h,label)} {} {
     code {env=NULL;
 pair=NULL;} {}
   }
-  Function {init(EnvelopeParams *env_)} {} {
-    code {env=env_;
+  Function {send_data(int param, int control, float value, bool isInteger = true)} {} {
+    code {//
+synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, engine, param, type);} {}
+  }
+  Function {init(EnvelopeParams *env_, int npart_, int kititem_, int engine_, int type_)} {} {
+    code {//
+env=env_;
 oldx=-1;
 currentpoint=-1;
 cpx=0;
-lastpoint=-1;} {}
+lastpoint=-1;
+synth = env->getSynthEngine();
+npart = npart_;
+engine = engine_;
+type = type_;} {}
   }
   Function {setpair(Fl_Box *pair_)} {} {
     code {pair=pair_;} {}
@@ -94,9 +109,11 @@ return((int) ((1.0-env->Penvval[n]/127.0)*ly));} {}
 
 int nearestpoint=0;
 int nearestval=1000000;//a big value
-for (int i=0;i<env->Penvpoints;i++){
+for (int i=0;i<env->Penvpoints;i++)
+{
    int distance=abs(x-getpointx(i))+abs(y-getpointy(i));
-   if (distance<nearestval) {
+   if (distance<nearestval)
+   {
      nearestpoint=i;
      nearestval=distance;  
    };
@@ -106,11 +123,14 @@ return(nearestpoint);} {}
   Function {draw()} {private
   } {
     code {int ox=x(),oy=y(),lx=w(),ly=h();
-if (env->Pfreemode==0) env->converttofree();
+if (env->Pfreemode==0) 
+    env->converttofree();
 int npoints=env->Penvpoints;
 
-if (active_r()) fl_color(FL_BLACK);
-    else fl_color(90,90,90);
+if (active_r())
+    fl_color(FL_BLACK);
+else
+    fl_color(90,90,90);
 if (!active_r()) currentpoint=-1;
 
 fl_rectf(ox,oy,lx,ly);
@@ -125,27 +145,33 @@ fl_line(ox+2,oy+ly/2,ox+lx-2,oy+ly/2);
 
 //draws the evelope points and lines
 Fl_Color alb=FL_WHITE;
-if (!active_r()) alb=fl_rgb_color(180,180,180);
+if (!active_r())
+    alb=fl_rgb_color(180,180,180);
 fl_color(alb);
 int oldxx=0,xx=0,oldyy=0,yy=getpointy(0);
 fl_rectf(ox-3,oy+yy-3,6,6);
-for (int i=1;i<npoints;i++){
+for (int i=1;i<npoints;i++)
+{
     oldxx=xx;oldyy=yy;
     xx=getpointx(i);yy=getpointy(i);
-    if (i==currentpoint) fl_color(FL_RED);
-        else fl_color(alb);
+    if (i==currentpoint)
+        fl_color(FL_RED);
+    else
+        fl_color(alb);
     fl_line(ox+oldxx,oy+oldyy,ox+xx,oy+yy);
     fl_rectf(ox+xx-3,oy+yy-3,6,6);
 };
 
 //draw the last moved point point (if exists)
-if (lastpoint>=0){
+if (lastpoint>=0)
+{
     fl_color(FL_CYAN);
     fl_rectf(ox+getpointx(lastpoint)-5,oy+getpointy(lastpoint)-5,10,10);
 };
 
 //draw the sustain position
-if (env->Penvsustain>0){
+if (env->Penvsustain>0)
+{
     fl_color(FL_YELLOW);
     xx=getpointx(env->Penvsustain);
     fl_line(ox+xx,oy+0,ox+xx,oy+ly);
@@ -154,54 +180,74 @@ if (env->Penvsustain>0){
 //Show the envelope duration and the current line duration
 fl_font(FL_HELVETICA|FL_BOLD,10);
 float time=0.0;
-if (currentpoint<=0){
+if (currentpoint<=0)
+{
    fl_color(alb);
-   for (int i=1;i<npoints;i++) time+=env->getdt(i);
-} else {
+   for (int i=1;i<npoints;i++)
+       time+=env->getdt(i);
+} 
+else 
+{
    fl_color(255,0,0);
    time=env->getdt(currentpoint);
 };
 char tmpstr[20];
-if (time<1000.0) snprintf((char *)&tmpstr,20,"%.1fms",time);
-     else snprintf((char *)&tmpstr,20,"%.2fs",time/1000.0);
+if (time<1000.0)
+    snprintf((char *)&tmpstr,20,"%.1fms",time);
+else
+    snprintf((char *)&tmpstr,20,"%.2fs",time/1000.0);
 fl_draw(tmpstr,ox+lx-20,oy+ly-10,20,10,FL_ALIGN_RIGHT,NULL,0);} {}
   }
   Function {handle(int event)} {return_type int
   } {
-    code {int x_=Fl::event_x()-x();
-int y_=Fl::event_y()-y();
+    code {int x_ = Fl::event_x() - x();
+int y_ = Fl::event_y() - y();
 
-if (event==FL_PUSH) {
-  currentpoint=getnearest(x_,y_);
-  cpx=x_;
-  cpdt=env->Penvdt[currentpoint];
-  lastpoint=currentpoint;
-  redraw();
-  if (pair!=NULL) pair->redraw();
-};
+if (event == FL_PUSH)
+{
+    currentpoint = getnearest(x_, y_);
+    cpx = x_;
+    cpdt = env->Penvdt[currentpoint];
+    lastpoint = currentpoint;
+    redraw();
+    if (pair != NULL)
+        pair->redraw();
+}
 
-if (event==FL_RELEASE){
-  currentpoint=-1;
-  redraw();
-  if (pair!=NULL) pair->redraw();
-};
+if (event == FL_RELEASE)
+{
+    currentpoint = -1;
+    redraw();
+    if (pair != NULL)
+        pair->redraw();
+}
 
-if ((event==FL_DRAG)&&(currentpoint>=0)){
-  int ny=127-(int) (y_*127.0/h());
-  if (ny<0) ny=0;if (ny>127) ny=127;
-  env->Penvval[currentpoint]=ny;
+if ((event == FL_DRAG) && (currentpoint >= 0))
+{
+    int ny = 127 - (int) (y_ * 127.0 / h());
+    if (ny < 0)
+        ny = 0;
+    if ( ny> 127)
+        ny = 127;
+    env->Penvval[currentpoint] = ny;
 
-  int dx=(int)((x_-cpx)*0.1);
-  int newdt=cpdt+dx;
-  if (newdt<0) newdt=0;if (newdt>127) newdt=127;
-  if (currentpoint!=0) env->Penvdt[currentpoint]=newdt;
-     else env->Penvdt[currentpoint]=0;
+    int dx = (int)((x_- cpx) * 0.1);
+    int newdt = cpdt + dx;
+    if (newdt < 0)
+        newdt = 0;
+    if (newdt > 127)
+        newdt = 127;
+    if (currentpoint!=0)
+        env->Penvdt[currentpoint] = newdt;
+    else
+        env->Penvdt[currentpoint] = 0;
 
-  redraw();
-  if (pair!=NULL) pair->redraw();
-};
-
-
+    redraw();
+    send_data(3, currentpoint, newdt);
+    send_data(4, currentpoint, ny);
+    if (pair!=NULL)
+        pair->redraw();
+}
 return(1);} {}
   }
   decl {Fl_Box *pair;} {private local
@@ -214,12 +260,16 @@ return(1);} {}
   }
   decl {int lastpoint;} {public local
   }
-} 
-
-decl {\#include "Misc/SynthEngine.h"} {public global
-} 
-
-decl {\#include "MasterUI.h"} {private global
+  decl {SynthEngine *synth;} {private local
+  }
+  decl {int npart;} {private local
+  }
+  decl {int kititem;} {private local
+  }
+  decl {int engine;} {private local
+  }
+  decl {int type;} {private local
+  }
 } 
 
 class EnvelopeUI {selected : {public Fl_Group,PresetsUI_}
@@ -243,12 +293,12 @@ delete (freemodeeditwindow);} {}
   Function {make_freemode_edit_window()} {} {
     Fl_Window freemodeeditwindow {
       label Envelope
-      xywh {813 22 575 180} type Double visible
+      xywh {813 22 575 180} type Double hide
     } {
       Fl_Box freeedit {
         label Envelope
         xywh {5 5 565 145} box FLAT_BOX color 0
-        code0 {o->init(env);}
+        code0 {o->init(env, npart, kititem, engine, type);}
         class EnvelopeFreeEdit
       }
       Fl_Button addpoint {
@@ -371,8 +421,8 @@ send_data(type, 35, o->value());}
   }
   Function {make_ADSR_window()} {} {
     Fl_Window envADSR {
-      xywh {1183 227 205 70} type Double color 50 labelfont 1
-      class Fl_Group visible
+      xywh {1183 227 205 70} type Double color 50 labelfont 1 hide
+      class Fl_Group
     } {
       Fl_Group {} {
         label {Amplitude Env}
@@ -712,8 +762,8 @@ send_data(type, 24, o->value());}
   }
   Function {make_free_window()} {} {
     Fl_Window envfree {
-      xywh {874 240 205 70} type Double color 50 labelfont 1 resizable
-      class Fl_Group visible
+      xywh {874 240 205 70} type Double color 50 labelfont 1 hide resizable
+      class Fl_Group
     } {
       Fl_Group envfreegroup {
         label {Amplitude Env}
@@ -723,7 +773,7 @@ send_data(type, 24, o->value());}
           label Envelope
           callback {envfree->redraw();}
           xywh {5 20 195 45} box FLAT_BOX color 0 resizable
-          code0 {o->init(env);}
+          code0 {o->init(env, npart, kititem, engine, type);}
           class EnvelopeFreeEdit
         }
         Fl_Button {} {
@@ -780,24 +830,30 @@ freeedit->setpair(freeeditsmall);
 refresh();} {}
   }
   Function {reinit()} {} {
-    code {if (env->Pfreemode!=0){
-  int answer=fl_choice("Disable the free mode of the Envelope?","No","Yes",NULL);
-  if (env->Pfreemode!=0) freemodebutton->value(1);
-          else freemodebutton->value(0);
-  if (answer==0) return;
-};
+    code {if (env->Pfreemode != 0)
+{
+    int answer=fl_choice("Disable the free mode of the Envelope?", "No", "Yes", NULL);
+    if (env->Pfreemode != 0)
+        freemodebutton->value(1);
+    else
+        freemodebutton->value(0);
+    if (answer == 0)
+        return;
+}
 
-if (env->Pfreemode==0) env->Pfreemode=1;
-     else env->Pfreemode=0;
+if (env->Pfreemode == 0)
+    env->Pfreemode = 1;
+else
+    env->Pfreemode = 0;
 
 hide();
-int winx=freemodeeditwindow->x();
-int winy=freemodeeditwindow->y();
+int winx = freemodeeditwindow->x();
+int winy = freemodeeditwindow->y();
 
 freemodeeditwindow->hide();
 
 envwindow->hide();
-Fl_Group *par=envwindow->parent();
+Fl_Group *par = envwindow->parent();
 par->hide();
 
 
@@ -807,45 +863,57 @@ par->redraw();
 
 par->show();
 show();
-freemodeeditwindow->position(winx,winy);
+freemodeeditwindow->position(winx, winy);
 freemodeeditwindow->show();
 
-if (env->Pfreemode!=0) {
-	freemodebutton->value(1);
-	addpoint->show();
-	deletepoint->show();
-	forcedreleasecheck->show();
-}else{
-	freemodebutton->value(0);
-	addpoint->hide();
-	deletepoint->hide();
-	forcedreleasecheck->hide();
+if (env->Pfreemode != 0)
+{
+    freemodebutton->value(1);
+    addpoint->show();
+    deletepoint->show();
+    forcedreleasecheck->show();
+}
+else
+{
+    freemodebutton->value(0);
+    addpoint->hide();
+    deletepoint->hide();
+    forcedreleasecheck->hide();
 };} {}
   }
   Function {refresh()} {} {
     code {freemodebutton->value(env->Pfreemode);
 
 sustaincounter->value(env->Penvsustain);
-if (env->Pfreemode==0) sustaincounter->hide();
-	else sustaincounter->show();
+if (env->Pfreemode==0)
+    sustaincounter->hide();
+else
+    sustaincounter->show();
 sustaincounter->maximum(env->Penvpoints-2);
 
 envstretchdial->value(env->Penvstretch);
-if (env->Pfreemode==0) envstretchdial->hide();
-	else envstretchdial->show();
+if (env->Pfreemode==0)
+    envstretchdial->hide();
+else
+    envstretchdial->show();
 
 linearenvelopecheck->value(env->Plinearenvelope);
-if ((env->Pfreemode==0)||(env->Envmode>2)) linearenvelopecheck->hide();
-	else linearenvelopecheck->show();
+if ((env->Pfreemode==0)||(env->Envmode>2))
+    linearenvelopecheck->hide();
+else
+    linearenvelopecheck->show();
 
 forcedreleasecheck->value(env->Pforcedrelease);
-if (env->Pfreemode==0) forcedreleasecheck->hide();
+if (env->Pfreemode==0)
+    forcedreleasecheck->hide();
 
 freeedit->redraw();
 
 
-if (env->Pfreemode==0){
-   switch(env->Envmode){
+if (env->Pfreemode==0)
+{
+   switch(env->Envmode)
+   {
          case(1):
          case(2):
 		e1adt->value(env->PA_dt);
@@ -885,7 +953,9 @@ if (env->Pfreemode==0){
          default:
          break; 
    };
-}else{
+}
+else
+{
        envfree->redraw();
 };
 
@@ -896,8 +966,10 @@ envADSRfilter->hide();
 envASRbw->hide();
 envfree->hide();
 
-if (env->Pfreemode==0){
-   switch(env->Envmode){
+if (env->Pfreemode==0)
+{
+   switch(env->Envmode)
+   {
          case(1):
          case(2):
            envwindow=envADSR;
@@ -913,10 +985,12 @@ if (env->Pfreemode==0){
          break;
          default:
          break; 
-   };
-}else{
+   }
+}
+else
+{
    envwindow=envfree;
-};
+}
 
 envwindow->resize(this->x(),this->y(),this->w(),this->h());
 
