@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-5-19 Will
 - Completed moving controls ID text from GUI to main code.
 - Corrected dev-notes/Yoshimi Controller Numbers.ods
+- Completed Envelope control IDs.
 
 2016-5-18 Will
 - Started moving controls ID text from GUI to main code.
